--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -40,4 +40,10 @@ $background-color: #121318;
     font-weight: 400;
     font-style: normal;
   }
+
+  a {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
 }
